--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Rezervační systém</title>
+    <meta name="author" content="Marek Přikryl" />
+    <meta name="keywords" content="rezervace, zasedacky" />
+    <meta name="description" content="Rezervační systém pro nemocnici v OUN." />
   </head>
   <body>
     <div id="root"></div>
